# poetry-ide-setup

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
doc/: ide_detect.md  intellij_config.md
scripts/: ci-watch.sh
src/poetry_ide_setup/: __init__.py  __main__.py  core.py  exceptions.py  ide_detector.py  poetry_detector.py  project_detector.py  runtime_detector.py  xml_updater.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_poetry_detector.py  test_project_detector.py  test_xml_updater.py
